Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-108154

Saving to MHTML while printing to PDF crashes with SIGSEGV

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P1: Critical
    • 6.5
    • 6.3, 6.4.0
    • WebEngine
    • None
    • Linux/X11
    • 823cc89c1 (108-based), c3ed0e176 (dev), a64c4bb59 (6.5)

    Description

      Adding and executing the following lines in the simplebrowser example is enough to reproduce the crash:
       

      m_tabWidget->currentWebView()->page()->printToPdf("/tmp/file.pdf");
      m_tabWidget->currentWebView()->page()->save("/tmp/file.mhtml");
      

      stacktrace

      1  base::Value::Clone                                           values.cc                                   296
      2  QtWebEngineCore::PrintViewManagerQt::RequestPrintPreview     print_view_manager_qt.cpp                   345 
      3  printing::mojom::PrintManagerHostStubDispatch::Accept        print.mojom.cc                              5792 
      4  mojo::InterfaceEndpointClient::HandleValidatedMessage        interface_endpoint_client.cc                952
      5  mojo::MessageDispatcher::Accept                              message_dispatcher.cc                       48 
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            davidsz Szabolcs David
            bterrier Benjamin Terrier
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes