Better handling of interrupted PDF printing

- Document the fact Stop WebAction can interrupt the in-progress PDF
generation.

- Update PrintViewManagerQt::PrintPreviewDone(): Normally
IsPrintRenderFrameConnected() implies IsRenderFrameLive(), but we have
to check both to avoid crash when render process exits. (Like Chrome
does.)

- Update PrintViewManagerQt::RequestPrintPreview(): Handle that case when
print preview params were sent between processes at the beginning, but it
was interrupted before RequestPrintPreview() could start PDF generation.

- Add a simple auto test to catch crashes

Pick-to: 6.5
Task-number: QTBUG-108154
Change-Id: I8a4f9cc97ddcf9a165d66a5981d93a023858fbc1
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>